# src/routes/routes.ts
@@ -69,6 +69,7 @@ export function RegisterRoutes(app: express.Express) {
     app.get('/api/v1/events/today',
         function(request: any, response: any, next: any) {
             const args = {
+                timeFrame: { "default": "today", "in": "query", "name": "timeFrame", "dataType": "string" },
             };
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
